first_stage/log/build_2024-08-14_15-42-00/first_stage_rg2/stderr.log
  File "/home/steven/ros2_ws/src/first_stage/install/first_stage_rg2/lib/python3.10/site-packages/first_stage_rg2/first_stage_rg2_ros2.py", line 286
    if self.grip_force > 1  # 例如，你設定的最小夾取力量
                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: expected ':'

